[package]
name = "mkit"
version = "0.3.0"
description = "Tools and macros for distributed and peer-to-peer applications"
authors = ["prataprc <prataprc@gmail.com>"]
documentation = "https://docs.rs/mkit/"
repository = "https://github.com/bnclabs/mkit"
keywords = ["cbor"]
categories = ["encoding", "concurrency"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4.8"
mkit-derive = { path = "mkit-derive", version = "=0.2.0" }
arbitrary = { version = "0.4", features = ["derive"] }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }

[features]
debug = []
