[package]
name = "mkit"
version = "0.3.0"
description = "Tools and macros for distributed and peer-to-peer applications"
repository = "https://github.com/bnclabs/mkit"
documentation = "https://docs.rs/mkit/"
keywords = ["cbor"]
categories = ["encoding", "concurrency"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
log = "0.4.8"
mkit-derive = { path = "mkit-derive", version = "=0.2.0" }
xorfilter-rs = { path = "../xorfilter", version = "0.2.0"}
arbitrary = { version = "0.4", features = ["derive"] }

[dev-dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }

[features]
debug = []
