[package]
name = "mkit-derive"
version = "0.1.0"
edition = "2018"
authors = ["prataprc <prataprc@gmail.com>"]
description = "Macros for inter-planetary applications"
documentation = "https://docs.rs/mkit"
repository = "https://github.com/bnclabs/mkit"
keywords = ["data", "macro", "cbor"]
categories = ["data"]
license = "MIT"

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.3.0"
proc-macro-error = "0.4.7"

[lib]
proc-macro = true
