[package]
name = "mkit-derive"
version = "0.3.0"
edition = "2018"
authors = ["prataprc <prataprc@gmail.com>"]
description = "Macros for distributed peer-to-peer applications"
documentation = "https://docs.rs/mkit"
repository = "https://github.com/bnclabs/mkit"
keywords = ["macro", "cbor"]
categories = ["encoding"]
license = "MIT"

[dependencies]
lazy_static = "1.2.0"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.3.0"
proc-macro-error = "0.4.7"

[lib]
proc-macro = true
